--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-md-5">
-    <img src="" alt="" class="img-responsive">
+    <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive" style="max-height: 300px">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1> New Recipe  </h1>
+    <h1> {{ recipe.name }}  </h1>
   </div>
 </div>
 <div class="row">
@@ -26,7 +26,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Desciption
+    {{ recipe.description }}
   </div>
 </div>
 <div class="row">
