--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,13 @@
 <div class="row">
   <div class="col-lg-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list
+    (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
   </div>
   <div class="col-lg-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail *ngIf="selectedRecipe; else infoText"
+    [recipe]="selectedRecipe"></app-recipe-detail>
+    <ng-template #infoText>
+      <p>Please select a text !</p>
+    </ng-template>
   </div>
 </div>
